tests/regression/baselines/test06_nested_inference.expected
ERROR
SyntaxError: Unexpected token ;
Note: expected tokens: ["in"]
Parse error occurred here:
// Test 6: Nested function type inference
let outer = fun x ->
    let inner = fun y -> x + y;
                              ^ 
    inner;
